# claude-code-plugins

./: .gitignore  README.md
.claude-plugin/: marketplace.json
fullstack-toolkit/: CLAUDE.md  README.md
fullstack-toolkit/.claude-plugin/: plugin.json
fullstack-toolkit/agents/python/: py-code-quality.md  py-test-runner.md
fullstack-toolkit/agents/shared/: dependency-checker.md
fullstack-toolkit/agents/typescript/: ts-code-quality.md
fullstack-toolkit/commands/: add.md  build.md  check.md  format.md  init.md
fullstack-toolkit/hooks/ci/: release.yml
fullstack-toolkit/skills/add-app/: SKILL.md
fullstack-toolkit/skills/add-cli/: SKILL.md
fullstack-toolkit/skills/add-lib/: SKILL.md
fullstack-toolkit/skills/hooks/: SKILL.md
fullstack-toolkit/skills/init-monorepo/: SKILL.md
fullstack-toolkit/skills/toolchain/: SKILL.md
fullstack-toolkit/templates/app-orpc/: moon.yml  package.json
fullstack-toolkit/templates/cli-ts/: moon.yml  package.json  tsup.config.ts
fullstack-toolkit/templates/lib-react/: moon.yml  package.json  tsup.config.ts  vitest.config.ts
fullstack-toolkit/templates/lib-ts/: moon.yml  package.json
fullstack-toolkit/templates/lib-ui/: moon.yml  package.json  tsconfig.json
fullstack-toolkit/templates/monorepo/: claude-settings.json  gitignore  lefthook.yml  moon-workspace.yml  prototools
fullstack-toolkit/templates/toolchain-py/: pyproject.toml
fullstack-toolkit/templates/toolchain-ts/: eslint.config.js  package.json  prettier.config.js
plugins/fullstack-toolkit/: README.md
plugins/fullstack-toolkit/commands/: add.md  build.md  (+3 more)
(+80 files in other folders)
